[project]
name = "forkitech-tron-retriever"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "envparse>=0.2.0",
    "fastapi>=0.115.12",
    "sqlalchemy>=2.0.39",
    "tronpy>=0.5.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
target-version = 'py312'
line-length = 88
force-exclude = true

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "W",  # pycodestyle
    "E",  # pycodestyle
    "C90",  # mccabe
    "I",  # isort
    "N",  # PEP8 naming
    "UP",  # pyupgrade
    "ANN",  # flake8-annotations
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "LOG",  # flake8-logging
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "PL",  # pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "COM812",  # missing-trailing-comma
    "PLR0913", # too-many-arguments
]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.mypy]
python_version = "3.12"

[tool.uv]
dev-dependencies = [
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
